fixed z-index sidebar and unchoose event

--- a/frontend/src/pages/BehaviourMapping.css
+++ b/frontend/src/pages/BehaviourMapping.css
@@ -25,6 +25,7 @@
     order: 1;
     background-color: #222020;
     color: #ece8e8;
+    z-index: 5;
 }
 
 .sidebar ul {
